# bedrockpy

./: .gitignore  README.md  pyproject.toml
bedrockpy/: bedrock_connect.py  main.py  parser.py
bedrockpy/packets/: base.py  connected_ping.py  connected_pong.py  open_connection_reply_1.py  open_connection_reply_2.py  open_connection_request_1.py  open_connection_request_2.py  unconnected_ping.py  unconnected_pong.py
